--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,45 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+  font-family: "Poppins", sans-serif;
+  justify-content: center;
+  margin: 10px;
+  background-color: #f0f0f0;
+  width: 60%;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+nav {
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  a {
+    color: black;
+    text-decoration: none;
   }
+
+  a.active {
+      text-decoration: none;
+      color: white;
+      background-color: grey;
+      border-radius: 4px;
+      padding: 8px;
+    }
+}
+
+
+form {
+  border: 1px solid black;
+  padding: 10px;
+}
+
+button {
+  padding: 5px;
+  width: 70px;
+  border-radius: 4px;
+  background-color: #54c358;
+
+  &:hover{
+    background-color: #45a049;
+  }
+}
+
+select, input {
+  padding: 10px;
+  border-radius: 4px
 }
