--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,43 +3,65 @@
   justify-content: center;
   margin: 10px;
   background-color: #f0f0f0;
-  width: 60%;
 }
 
 nav {
-
   a {
     color: black;
     text-decoration: none;
   }
 
   a.active {
-      text-decoration: none;
-      color: white;
-      background-color: grey;
-      border-radius: 4px;
-      padding: 8px;
-    }
+    text-decoration: none;
+    color: white;
+    background-color: grey;
+    border-radius: 4px;
+    padding: 8px;
+  }
 }
 
-
 form {
-  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  border: 2px solid black;
+  border-radius: 5px;
   padding: 10px;
+  border: 4px solid rgb(190, 190, 190);
 }
 
 button {
   padding: 5px;
-  width: 70px;
+  width: 10rem;
   border-radius: 4px;
   background-color: #54c358;
 
-  &:hover{
+  &:hover {
     background-color: #45a049;
   }
 }
 
-select, input {
+select,
+input {
   padding: 10px;
-  border-radius: 4px
+  border-radius: 4px;
+}
+
+.material_list {
+  border: 2px solid black;
+  padding: 5px;
+  width: 70%;
+
+  .material_list-item {
+    border: 4px solid rgb(190, 190, 190);
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px;
+
+    p {
+      width: 30%;
+      padding: 10px;
+      border-radius: 5px;
+    }
+  }
 }
