--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,25 @@
 * {
   font-family: "Poppins", sans-serif;
   justify-content: center;
-  margin: 10px;
+  margin: 0.5rem;
   background-color: #f0f0f0;
 }
 
+h2 {
+  margin: 1.5rem;
+}
+
 nav {
+  padding: 1.5rem;
+  background-color: rgb(207, 207, 207);
+  position: sticky;
+  top: 0;
+  overflow: hidden;
+
   a {
     color: black;
     text-decoration: none;
+    background-color: inherit;
   }
 
   a.active {
@@ -16,7 +27,7 @@ nav {
     color: white;
     background-color: grey;
     border-radius: 4px;
-    padding: 8px;
+    padding: 0.7rem;
   }
 }
 
@@ -32,12 +43,12 @@ form {
 
 button {
   padding: 5px;
-  width: 10rem;
+  width: 15rem;
   border-radius: 4px;
-  background-color: #54c358;
+  background-color: rgb(190, 190, 190);
 
   &:hover {
-    background-color: #45a049;
+    background-color: rgb(141, 141, 141);
   }
 }
 
@@ -48,9 +59,17 @@ input {
 }
 
 .material_list {
-  border: 2px solid black;
-  padding: 5px;
-  width: 70%;
+  border: 2px solid rgb(71, 71, 71);
+  border-radius: 5px;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+
+  .list_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
   .material_list-item {
     border: 4px solid rgb(190, 190, 190);
