--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,6 @@ nav {
   top: 0;
   overflow: hidden;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
   text-align: center;
 
@@ -45,11 +44,10 @@ nav {
 }
 
 section {
-  width: fit-content;
   padding: 1rem;
-  background-color: rgb(219, 240, 223);
-  border: 2px solid green;
-  border-radius: 0.3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 form {
@@ -65,8 +63,6 @@ form {
   label {
     font-weight: 600;
     color: rgb(0, 0, 145);
-    padding: 4px;
-    border-radius: 4px;
   }
 }
 
@@ -85,7 +81,7 @@ button {
 select,
 input,
 input:checked {
-  padding: 10px;
+  padding: 0.5rem;
   border-radius: 4px;
 }
 
