--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,11 +11,12 @@ h2 {
 }
 
 nav {
+  height: 2.5rem;
   padding: 1rem;
   background-color: rgb(207, 207, 207);
   border: 1px solid black;
-  position: sticky;
   top: 0;
+  position: sticky;
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -38,7 +39,6 @@ nav {
       text-decoration: none;
       color: white;
       background-color: grey;
-      border: 2px solid black;
     }
   }
 }
@@ -54,16 +54,74 @@ form {
   display: flex;
   flex-direction: column;
   width: 30rem;
-  border: 2px solid black;
   border-radius: 5px;
-  padding: 10px;
-  border: 4px solid rgb(190, 190, 190);
+  padding: 0.6rem;
+  border: 2px solid rgb(190, 190, 190);
   background-color: rgb(233, 233, 233);
 
   label {
+    align-content: center;
     font-weight: 600;
     color: rgb(0, 0, 145);
   }
+
+  .form-info {
+    padding: 0.5rem;
+    border: 2px dashed black;
+    border-radius: 4px;
+    background-color: rgb(255, 244, 230);
+
+    h3 {
+      text-align: center;
+      padding: 0.5rem;
+    }
+  }
+
+  .form-line {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+
+    input {
+      width: 60%;
+    }
+
+    select {
+      width: 65%;
+    }
+  }
+
+  p.submit-message:empty {
+    display: none;
+  }
+  p.submit-message {
+    padding: 0.5rem;
+    width: fit-content;
+    background-color: white;
+    border: 2px dashed rgb(115, 0, 0);
+    color: rgb(115, 0, 0);
+  }
+}
+
+select,
+input,
+input:checked {
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+
+select:focus {
+  border: 2px solid black;
+}
+
+input:focus {
+  background-color: rgb(255, 237, 215);
+}
+
+input[type="checkbox"] {
+  width: 1rem;
+  height: 1rem;
 }
 
 button {
@@ -76,13 +134,6 @@ button {
   &:hover {
     background-color: rgb(141, 141, 141);
   }
-}
-
-select,
-input,
-input:checked {
-  padding: 0.5rem;
-  border-radius: 4px;
 }
 
 .filter {
