--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,6 @@
 }
 
 h2 {
-  padding: 1rem;
   color: rgb(0, 0, 86);
   width: fit-content;
 }
@@ -73,7 +72,6 @@ form {
 
     h3 {
       text-align: center;
-      padding: 0.5rem;
     }
   }
 
@@ -98,9 +96,7 @@ form {
   p.submit-message {
     padding: 0.5rem;
     width: fit-content;
-    background-color: white;
-    border: 2px dashed rgb(115, 0, 0);
-    color: rgb(115, 0, 0);
+    color: rgb(194, 2, 2);
   }
 }
 
@@ -133,6 +129,13 @@ button {
 
   &:hover {
     background-color: rgb(141, 141, 141);
+  }
+
+  &:disabled {
+    background-color: grey;
+    &:hover {
+      background-color: grey;
+    }
   }
 }
 
