--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,28 +140,31 @@ button {
 }
 
 .filter {
+  padding: 0;
   border: 1px solid rgb(71, 71, 71);
   width: fit-content;
-  justify-content: flex-start;
-  flex-direction: row;
+  display: flex;
+  align-items: center;
 }
 
 /* Materials List */
 .material_list {
-  background-color: rgb(233, 233, 233);
-  border: 1px solid rgb(71, 71, 71);
-  border-radius: 5px;
   padding: 2rem;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  background-color: rgb(233, 233, 233);
+  border: 1px solid rgb(71, 71, 71);
+  border-radius: 5px;
 
   .list_header {
-    background-color: rgb(190, 190, 190);
-    color: rgb(0, 0, 145);
-    font-weight: 600;
     padding: 0.6rem;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
+    background-color: rgb(190, 190, 190);
+    color: rgb(0, 0, 145);
+    font-weight: 600;
 
     p {
       width: 10rem;
@@ -169,13 +172,14 @@ button {
   }
 
   .material_list-item {
+    margin-top: 0.5rem;
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     border: 2px solid transparent;
     padding: 0.6rem;
     background-color: white;
     border-radius: 5px;
-    align-items: baseline;
 
     &:hover {
       border: 2px solid rgb(136, 136, 136);
@@ -190,20 +194,20 @@ button {
 
 /* Reports */
 table {
-  width: auto;
+  width: fit-content;
   border-collapse: collapse;
-  margin: 0;
 
   thead {
     border: 1px solid black;
     background-color: rgb(190, 190, 190);
 
     tr {
-      text-align: left;
+      text-align: center;
 
       th {
-        padding: 0.5rem;
+        border: 1px solid black;
         color: rgb(0, 0, 145);
+        padding: 0.7rem;
       }
     }
   }
