Painted negative values in red in the transactions rep

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -228,6 +228,10 @@ table {
     td {
       padding: 0.5rem;
       border: 1px solid black;
+
+      &.negative {
+        color: rgb(255, 0, 0);
+      }
     }
   }
 }
