--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,13 @@ input[type="checkbox"] {
   height: 1rem;
 }
 
+/* Remove arrows/spinners */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 button {
   font-size: 1rem;
   padding: 0.5rem;
