Added confirmation window

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,6 +128,24 @@ form {
   }
 }
 
+.confirmation-window {
+  color: rgb(194, 2, 2);
+  padding: 4rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: fit-content;
+  background-color: #f3f3f3;
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  border: 2px solid black;
+  border-radius: 5px;
+  z-index: 1000;
+  transition: all 0.5s;
+  text-align: center;
+  font-size: large;
+}
+
 select,
 input,
 input:checked {
