--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,18 +13,20 @@ a {
 
 nav {
   padding: 1rem;
-  height: 2.5rem;
+  width: 8rem;
+  height: 100vh;
   background-color: rgb(207, 207, 207);
-  border: 1px solid black;
+  border-right: 1px solid black;
+  position: fixed;
   top: 0;
-  position: sticky;
-  overflow: hidden;
+  left: 0;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  text-align: center;
-  justify-content: center;
+  overflow-y: auto;
 
   a {
+    width: 100%;
     padding: 0.7rem;
     border-radius: 4px;
     font-weight: 600;
@@ -32,6 +34,8 @@ nav {
     text-decoration: none;
     background-color: inherit;
     border: 2px solid transparent;
+    text-align: center;
+    display: block;
 
     &:hover {
       border: 2px solid black;
@@ -45,23 +49,37 @@ nav {
   }
 
   .user-info {
-    padding: 0.1rem;
-    left: 1rem;
-    position: absolute;
-    text-align: left;
+    margin-bottom: auto;
+    width: 100%;
+    padding: 0.5rem;
+    text-align: center;
     color: rgb(0, 0, 145);
-    border: 1px solid rgb(0, 0, 145);
     border-radius: 5px;
+    background-color: rgba(0, 0, 145, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.3rem;
 
     p {
-      margin: 0.3rem;
+      margin: 0;
+      font-size: 0.9rem;
+    }
+
+    p:first-child {
+      font-weight: bold;
+    }
+
+    p:last-child {
+      font-style: italic;
     }
   }
 
   .sign-out {
+    margin-top: auto;
     padding: 0.5rem;
-    right: 1rem;
-    position: absolute;
+    width: 100%;
+    text-align: center;
   }
 }
 
