--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,7 +153,7 @@ form {
     display: none;
   }
   p.submit-message {
-    width: fit-content;
+    text-align: center;
     color: rgb(194, 2, 2);
   }
 }
