--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -339,7 +339,15 @@ table {
       border: 1px solid black;
 
       &.negative {
-        color: rgb(255, 0, 0);
+        color: #d32f2f;
+      }
+
+      &.positive {
+        color: #2e7d32;
+      }
+
+      &.neutral {
+        color: #e67e22;
       }
     }
   }
