--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,22 @@
   font-family: "Poppins", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
+.layout-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.main-content {
+  flex: 1;
+}
+
 h2 {
   color: rgb(0, 0, 86);
   width: fit-content;
@@ -13,6 +29,15 @@ h2 {
 
 a {
   margin: 0.5rem;
+}
+
+.section-description {
+  text-align: center;
+  margin: 1rem;
+  padding: 0.5rem;
+  border: 2px dashed black;
+  border-radius: 4px;
+  background-color: rgb(255, 244, 230);
 }
 
 section {
@@ -351,4 +376,13 @@ table {
       }
     }
   }
+}
+
+footer {
+  margin-left: calc(var(--nav-width) + 2rem);
+  padding: 0.5rem;
+  text-align: center;
+  font-size: 0.9rem;
+  background-color: #f1f1f1;
+  color: #333;
 }
