--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,24 +65,23 @@ nav {
 
   a {
     width: 90%;
-    padding: 0.7rem;
+    padding: 1rem;
     border-radius: 4px;
     font-weight: 600;
     color: rgb(0, 0, 145);
     text-decoration: none;
-    background-color: inherit;
-    border: 2px solid transparent;
+    background-color: white;
     text-align: center;
     display: block;
 
     &:hover {
-      border: 2px solid black;
+      background-color: lightgray;
     }
 
     &.active {
       text-decoration: none;
       color: white;
-      background-color: grey;
+      background-color: rgb(150, 150, 150);
     }
   }
 
@@ -127,6 +126,52 @@ nav {
   }
 }
 
+select,
+input,
+input:checked {
+  border: none;
+  padding: 0.5rem;
+  border-radius: 4px;
+  font-size: medium;
+}
+
+input:focus {
+  background-color: rgb(255, 237, 215);
+}
+
+input[type="checkbox"] {
+  width: 1rem;
+  height: 1rem;
+}
+
+/* Remove arrows/spinners */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+  margin: 0.5rem;
+  padding: 0.7rem;
+  font-size: 1rem;
+  width: fit-content;
+  border: none;
+  border-radius: 4px;
+  background-color: rgb(190, 190, 190);
+
+  &:hover {
+    background-color: rgb(141, 141, 141);
+  }
+
+  &:disabled {
+    background-color: grey;
+    &:hover {
+      background-color: grey;
+    }
+  }
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -163,7 +208,7 @@ form {
     display: flex;
     justify-content: space-between;
     padding: 0;
-    margin: 0;
+    margin: 0.5rem;
 
     input {
       width: 60%;
@@ -220,61 +265,16 @@ form {
   }
 }
 
-select,
-input,
-input:checked {
-  margin: 0.5rem;
-  padding: 0.5rem;
-  border-radius: 4px;
-  font-size: medium;
-}
-
-select:focus {
-  border: 2px solid black;
-}
-
-input:focus {
-  background-color: rgb(255, 237, 215);
-}
-
-input[type="checkbox"] {
-  width: 1rem;
-  height: 1rem;
-}
-
-/* Remove arrows/spinners */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-button {
-  margin: 0.5rem;
-  padding: 0.5rem;
-  font-size: 1rem;
-  width: fit-content;
-  border-radius: 4px;
-  background-color: rgb(190, 190, 190);
-
-  &:hover {
-    background-color: rgb(141, 141, 141);
-  }
-
-  &:disabled {
-    background-color: grey;
-    &:hover {
-      background-color: grey;
-    }
-  }
-}
-
 .filter {
   padding: 0;
   border: 1px solid rgb(71, 71, 71);
   width: fit-content;
   display: flex;
   align-items: center;
+
+  input {
+    margin: 1rem;
+  }
 }
 
 /* Materials List */
@@ -355,8 +355,10 @@ table {
   }
 
   tbody {
-    tr:hover {
-      background-color: bisque;
+    tr {
+      &:hover {
+        background-color: bisque;
+      }
     }
 
     td {
