--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -312,10 +312,13 @@ form {
     box-shadow: 0 0 5px rgba(0, 0, 120, 0.5);
   }
 
+  .form-checkboxes {
+    margin: 1rem 0 1rem 0;
+  }
+
   .form-buttons {
     display: flex;
     justify-content: center;
-    margin-top: 1rem;
   }
 
   button {
@@ -338,7 +341,6 @@ form {
     text-align: center;
     color: rgb(194, 2, 2);
     font-weight: 600;
-    margin-top: 0.5rem;
   }
 
   p.submit-message:empty {
@@ -354,8 +356,7 @@ form {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 22rem;
-  max-width: 90%;
+  width: auto;
   background-color: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
   border: 2px solid rgb(100, 100, 100);
