--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,14 +24,12 @@ body {
 
 h2 {
   color: rgb(0, 51, 102);
-  background: linear-gradient(to right, rgb(224, 240, 255), rgb(200, 230, 255));
-  width: 100%;
+  width: 60%;
   text-align: center;
   font-weight: bold;
   letter-spacing: 1.5px;
   padding: 0.8rem 0;
   margin-bottom: 1.5rem;
-  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.05);
   border-bottom: 3px solid rgb(176, 224, 255);
 }
 
@@ -232,6 +230,22 @@ button {
   }
 }
 
+.control-button {
+  min-width: 9rem;
+  padding: 0.7rem;
+  font-weight: 600;
+  background-color: #f0f0f0;
+  color: #333;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+
+  &:hover {
+    background-color: #e0e0e0;
+  }
+}
+
 /* Forms */
 form {
   display: flex;
@@ -257,7 +271,6 @@ form {
   }
 
   label {
-    margin: 0.3rem;
     min-width: fit-content;
     font-weight: 700;
     color: rgb(0, 0, 120);
@@ -269,6 +282,10 @@ form {
     border: 2px dashed black;
     border-radius: 6px;
     background-color: rgb(255, 244, 230);
+
+    label {
+      margin-right: 0.5rem;
+    }
   }
 
   .form-info h3 {
@@ -290,6 +307,7 @@ form {
   }
 
   .form-checkboxes {
+    align-items: center;
     display: flex;
     flex-direction: row;
     gap: 0.5rem;
@@ -408,6 +426,30 @@ form {
   button.cancel:hover {
     background-color: rgb(80, 80, 80);
   }
+}
+
+.blur-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  backdrop-filter: blur(6px);
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 999;
+}
+
+.editing-window {
+  padding: 4rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+  z-index: 1000;
+  transition: all 0.4s ease-in-out;
 }
 
 /* Materials List */
