--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,14 @@ a {
 }
 
 /* Sections */
+section {
+  margin-bottom: 1rem;
+  margin-left: calc(var(--nav-width) + 2rem);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .section-description {
   max-width: 40rem;
   text-align: center;
@@ -48,12 +56,25 @@ a {
   background-color: rgb(255, 244, 230);
 }
 
-section {
-  margin-bottom: 1rem;
-  margin-left: calc(var(--nav-width) + 2rem);
+.section-cards {
+  width: 50rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  gap: 2rem;
+  margin: 1rem;
+}
+
+.card {
+  text-align: center;
+  background-color: #f9f9f9;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+
+  h3 {
+    color: rgb(0, 51, 102);
+    margin-top: 0;
+  }
 }
 
 /* Navigation */
@@ -651,6 +672,13 @@ table {
       text-align: center;
       font-size: 1rem;
       font-weight: 500;
+
+      &.group-header {
+        background-color: #f3f3f3;
+        font-size: 1rem;
+        padding: 0.5rem;
+        text-align: center;
+      }
 
       &.negative {
         color: #d32f2f;
